    LFN support with "lfn=auto" on Windows. (Wengier)
  - VER /R now shows DOSBox-X's Git commit SHA1, in
    addition to the build date and other version
    information shown by the VER command. (Wengier)
  - Fixed that joystick may not work with the setting
    "usescancodes=auto" when a non-US keyboard layout
    is activated on the SDL1 build. (Wengier)
  - Fixed possible failure when mounting .VHD images,
    and the issue that leading colon (:) or read-only
    marker may not work for such images. (Wengier)
  - Add "-ro" option for IMGMOUNT command to mark all
    disk imaages as read-only at once. (Wengier)
  - Added option to the Windows installer which allows
    to automatically upgrade the DOSBox-X config file
    (dosbox-x.conf) to the latest version format while
    keeping the current user settings. Also added the
    option to add the context menu for executables and
    folders in the Windows Explorer. (Wengier)
  - The default value for "output" (in "sdl" section)
    is now "default", which will default to the value
    according to your platform. (Wengier)
  - MOUNT command's -Q (quiet) option now silences
    virtually all output of this command. (Wengier)
  - Worked around the mounting issue with LaunchBox,
    by allowing a mounting command-line with single
    quotes like MOUNT C 'X:\DOS' on Windows. (Wengier)
  - Unmounting ISO drives will auto-unmount associated
    El Torito floppy drives (if any) too. (Wengier)
  - Updated xxHash library by Yann Collet from 0.7.4
    to the stable version 0.8.0. (Wengier)
  - Added "Quick launch program..." menu (under "DOS")
    to quickly run the specified program as selected
    by the Windows file browser in DOSBox-X. (Wengier)
  - The save state feature now tries to save and then
    restore the mounted drives of all types (if the
    paths or image files still exist on host system).
    This fixes the "save state corrupted" error while
    trying to load saved states but the drives are not